Set fmt version to use to be the one in OpenAL

--- a/3rdparty/OpenAL/CMakeLists.txt
+++ b/3rdparty/OpenAL/CMakeLists.txt
@@ -9,6 +9,7 @@ if(USE_SYSTEM_OPENAL)
     target_link_libraries(3rdparty_openal INTERFACE OpenAL::OpenAL)
     set_target_properties(OpenAL::OpenAL PROPERTIES IMPORTED_GLOBAL ON)
 else()
+    include_directories(BEFORE ${CMAKE_SOURCE_DIR}/3rdparty/OpenAL/openal-soft/fmt-11.2.0/include)
     option(ALSOFT_UTILS "Build utility programs" OFF)
     option(ALSOFT_EXAMPLES "Build example programs" OFF)
     set(LIBTYPE "STATIC")
